fixed header bar clipping error

--- a/BrossmanJ_final/deploy/css/styles.css
+++ b/BrossmanJ_final/deploy/css/styles.css
@@ -510,7 +510,6 @@ textarea {
     font-weight: 400;
     font-size: 27px;
     line-height: 40px;
-    gap: 115px;
   }
 }
 
