--- a/BrossmanJ_final/dev/scss/layout/_header.scss
+++ b/BrossmanJ_final/dev/scss/layout/_header.scss
@@ -56,7 +56,7 @@
     font-weight: 400;
     font-size: 27px;
     line-height: 40px;
-    gap: 115px;
+    // gap: 115px;
   }
   
 }
